# scripts-for-sonexis

./: .gitignore  README.md  download_models.py  main.py  pyproject.toml  requirements.txt  review_finalize.py
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md
docs/: colab_messy_input.md
pipeline/: __init__.py  api.py  audio_loader.py  batch_writer.py  code_switch.py  confidence.py  config.py  dataset_writer.py  diarisation.py  input_normalizer.py  interaction_metadata.py  language_detection.py  main.py  metadata_extraction.py  offline.py  output_formatter.py  overlap.py  preprocessing.py  punctuation.py  quality_checker.py  quality_tier.py  requirements.txt  review_queue.py  runner.py  schema_validator.py  snr.py  transcription.py  vad.py  validation.py
pipeline/exporters/: __init__.py  common.py  csv_manifest.py  kaldi.py  (+1 more)
schema/: dataset_record.schema.json  dataset_schema.json
scripts/: __init__.py  main.py  review_finalize.py
sonexis-script-llm-main/: OFFLINE_SETUP.md  README.md  download_models.py  main.py  pyproject.toml
tests/: __init__.py  test_alignment.py  test_cli.py  test_dataset_metadata_extensions.py  test_input_normalizer.py  test_metadata_fields.py  test_pair_timing.py  test_phase2_quality_signals.py  test_phase3_code_switch_punctuation.py  test_phase4_exports.py  test_premium_accuracy_gate.py  test_premium_alignment.py  test_premium_consensus.py  test_premium_routing.py  test_premium_schema.py  test_review_finalize.py  test_schema_lockdown.py  test_studio_speaker_folders.py  test_validation_report.py
(+97 files in other folders)
