[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sonexis-pipeline"
version = "3.0.0"
description = "Fully offline conversational-audio -> structured dataset pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sonexis contributors" }]
keywords = ["asr", "speech", "diarisation", "whisper", "hinglish", "dataset"]

dependencies = [
    "faster-whisper>=1.0.3",
    "deepgram-sdk>=3.7.0",
    "google-cloud-speech>=2.31.0",
    "librosa>=0.10.2",
    "soundfile>=0.12.1",
    "pydub>=0.25.1",
    "noisereduce>=3.0.2",
    "webrtcvad-wheels>=2.0.14",
    "scikit-learn>=1.4.2",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "fasttext-wheel>=0.9.2",
    "tqdm>=4.66.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
parquet = ["pandas>=2.2.0", "pyarrow>=15.0.0"]
pyannote = ["pyannote.audio>=3.1.1", "torch>=2.0.0"]

[project.scripts]
sonexis-pipeline = "scripts.main:main"

[tool.setuptools]
packages = [
    "pipeline",
    "pipeline.steps",
    "pipeline.processors",
    "pipeline.utils",
    "pipeline.premium",
    "pipeline.premium.adapters",
    "pipeline.products",
    "scripts",
]

[tool.setuptools.package-data]
pipeline = ["*.md", "*.txt"]
